Updated from @b2data/core-backend
